--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   </head>
   <body>
     <div id="root"></div>
+    <button class="g-recaptcha" 
+        data-sitekey="6LfcPIQmAAAAAE0HR_okaSWAiMlK-SEU6ErutOW5" 
+        data-callback='onSubmit' 
+        data-action='submit'>Submit</button>
     
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script>
+      function onSubmit(token) {
+        document.getElementById("demo-form").submit();
+      }
+    </script>
+   
   </body>
 </html>
